testsets/inference/stderr/test-if3.stderr
llc: error: llc: testsets/inference/llvm/test-if3.ll:22:1: error: expected instruction opcode
then:                                             ; preds = %entry
^
